# SQLAlchemySync

./: README.md  conftest.txt  create_main.py  populate_main.py  pyproject.py  pyproject.toml  requirements.txt  requriments.txt
ScriptsAuxiliares/: Auxiliar.py  DataBaseFeatures.py
conf/: db_session.py
db/: picoles - Copy (2).sqlite  picoles - Copy.sqlite  picoles.sqlite  picoles_BK.sqlite
db_bk/: picoles.sqlite
models/: __all_models.py  aditivo_nutritivo.py  aditivo_nutritivo_picole.py  conservante.py  conservante_picole.py  ingrediente.py  ingrediente_picole.py  lote.py  lote_bk.py  lote_nota_fiscal.py  model_base.py  nota_fiscal.py  nota_fiscal_old.py  picole.py  picole_old.py  revendedor.py  sabor.py  tipo_embalagem.py  tipo_picole.py
tests/: run_tests.py
tests/models/: test_aditivo_nutritivo.py  test_aditivo_nutritivo_picole.py  test_conservante.py  test_conservante_picole.py  test_db_session.py  test_ingrediente.py  test_ingrediente_picole.py  test_lote.py  test_lote_nota_fiscal.py  test_nota_fiscal.py  test_picole.py  test_revendedor.py  test_sabor.py  test_tipo_embalagem.py  test_tipo_picole.py
